Thu Jul 23 00:59:23 CEST 1998  Eckehard Berns  <eb@berns.prima.de>

	* gnome-stock: added `first' and `last' icons from gnomecard.

1998-07-22  Havoc Pennington  <hp@pobox.com>

	* gnome-stock.h: #include "gnome-pixmap.h" rather than
  	<libgnomeui/gnome-pixmap.h>

	* gnome-pixmap.h: #include gnome-defs.h so that this file
	can be included without the rest of libgnomeui (e.g. in 
	gnome--)

1998-07-21  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas-line.c (gnome_canvas_line_point): Finished
	implementing distance-to-point method.  It is a bit buggy, I will
	test it tomorrow.

	* gnome-canvas-util.c (gnome_canvas_get_miter_points): New public
	function to calculate the butt points of a line segment.
	(gnome_canvas_polygon_to_point): New public function to compute
	the distance between a polygon and a point.

	* gnome-canvas-line.c (recalc_bounds): We can only calculate
	mitered points up to (line->num_points - 3).
	(gnome_canvas_line_draw): Use pointer arithmetic instead of
	calculating indices explicitly.
	(recalc_bounds): Likewise.

Mon Jul 20 22:41:29 1998  John Ellis  <johne@bellatlantic.net>

	* gnome-dentry-edit.c (gnome_dentry_edit_sync_display): fix segfault
	when dentry->exec should be empty, but isn't. hmm...
	(gnome_dentry_edit_set_icon): fix when clearing by setting it "".

Mon Jul 20 17:30:12 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-client.c (gnome_client_init): Only reallocate buffer if
	errno is ERANGE.

Sun Jul 19 23:07:38 1998  George Lebl  <jirka@5z.com>

	* gnome-propertybox.c: fix the {set,get}_data calls, they now use
	  the proper object

1998-07-19  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas.c (gnome_canvas_item_construct
	gnome_canvas_item_constructv): Removed the unused type parameter.

	* gnome-canvas-line.c (recalc_bounds): Implemented the
	bounds-calculation routine.

	* gnome-canvas-util.c (gnome_canvas_get_miter_points): New public